docs: README 전면 업데이트 (OFS/Batch/kafka-python 반영), run_ingest.sh에 HADOOP_CONF_DIR 추가
Co-authored-by: Cursor <cursoragent@cursor.com>